# org-chart-goose-orchestrator

./: .dockerignore  .env.example  .gitignore  .goosehints  .gooseignore  .spectral.yaml  CHANGELOG.md  CLEANUP-PROPOSAL.md  CODEOWNERS  COMMIT-SUMMARY-2025-11-10.md  CONTRIBUTING.md  Cargo.toml  DEMO_GUIDE.md  DOCS_INDEX.md  GITHUB_PAGES_SETUP.md  IMAGES_FIXED.md  Makefile  NEXT-SESSION-HANDOFF.md  NEXT-SESSION-PROMPT.md  PHASE-2.2-COMPLETION-STATUS.md  PROJECT_TODO.md  PUBLICATION_CHECKLIST.md  README.md  RESUME_PROMPT.md  RESUME_PROMPT_FINAL.md  RUNNING_RECIPES.md  SESSION-COMPLETE-SUMMARY.md  THOUGHTS.md  VERSION_PINS.md  WORKSTREAM-D-STATUS.md  bench_guard.sh  build-controller.sh  org chart goose project analysis  plan.mmd  productdescription.md  technical-requirements.md  test-privacy-guard-per-instance.sh
.github/: PULL_REQUEST_TEMPLATE.md  lychee.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: phase1-ci.yml
.goose/recipes/: adr-create.yaml  business-model-validation.yaml  code-review.yaml  lint-test.yaml  planner.yaml  product-owner.yaml  technical-requirements.yaml  update-docs-index.yaml
.obsidian/: graph.json  workspace.json
Demo/: Container_Management_Playbook.md  DEMO_GUIDE.md  Demo-Validation-State.json  Demo-Validation-State.json.backup  Demo_Execution_Plan.md  ENHANCED_DEMO_GUIDE.md  REPOSITORY_CLEANUP_ANALYSIS.md  SCREENSHOT_AUDIT_GUIDE.md  Screenshot_Audit_Executive_Summary.md  Screenshot_Audit_Index.md  System_Analysis_Report.md  TRANSPORT_CLOSED_TROUBLESHOOTING.md  Untitled 1.md  Untitled.md  Validation-Checklist.md  Volume_Deletion_Recovery_Guide.md
Demo/Demo Archive/: COMPREHENSIVE_DEMO_GUIDE.md  DEMO_GUIDE.md  DEMO_GUIDE_COMPARISON.md  Demo_Execution_Plan.md  ENHANCEMENT_DETAILS.md  QUICK_DECISION_GUIDE.md
Demo/Demo fixes/: CHANGES-IMPLEMENTATION-GUIDE.md  ISSUE-1-Privacy-Guard-Root-Cause.md  Privacy Guard & Agent_Mesh & Database.md  Privacy-Guard-Pattern-Reference.md  Prompt.md  Recommendations_And_Next_Steps.md  TROUBLESHOOTING_FIXES.md  Validation-Checklist.md  Vault_Token Vs AppRole Token.md  Volume_Deletion_Recovery_Guide.md
Technical Project Plan/: master-technical-project-plan.md  technical-requirements.md
Technical Project Plan/Archive/: MASTER-PLAN-REVISION-ANALYSIS.md
Technical Project Plan/PM Phases/: COMPLETION-PACKAGE.md  FINAL-ARTIFACTS-SUMMARY.md  MASTER-ORCHESTRATION-GUIDE.md  PHASE-ARTIFACTS-SUMMARY.md  PHASE-PROMPT-TEMPLATE.md  (+7 more)
archive/phase5-mcp-investigation/privacy-guard-mcp-wrapper/: .gitignore  pyproject.toml
archive/phase5-mcp-investigation/privacy-guard-mcp-wrapper/privacy_guard_mcp/: __main__.py  server.py
archive/phase5-mcp-investigation/privacy-guard-mcp-wrapper/privacy_guard_mcp/tools/: mask_pii.py
benchmark_results/: latencies.txt
db/: README.md
docs/: BUILD_PROCESS.md  HOW-IT-ALL-FITS-TOGETHER.md  MASTER-PLAN-OLLAMA-NER-UPDATE.md  MIGRATION-PHASE5.md  PHASE-4-UPDATE-SUMMARY.md  README.md  THIRD_PARTY.md  UPSTREAM-CONTRIBUTION-STRATEGY.md  _config.yml  analyst-profile-checklist.md  department-field-enhancement.md  index.html  index.md
goose-versions-references/: README.md
privacy-guard-mcp/: Cargo.toml  README.md
privacy-guard-mcp/src/: config.rs  interceptor.rs  ollama.rs  tokenizer.rs
privacy-guard-mcp/tests/: integration_test.rs
profiles/: analyst.yaml  developer.yaml  finance.yaml  hr.yaml  legal.yaml  manager.yaml  marketing.yaml  support.yaml
scripts/: admin_upload_csv.sh  execute-demo-tests.sh  fix-oidc-issuer.sh  generate_profile_seeds.py  get-jwt-token.sh  get_admin_token.sh  privacy-goose-validate.sh  run-agent-mesh.sh  run-tests.sh  setup-env.sh  setup-keycloak-dev-realm.sh  setup-vault-logrotate.sh  sign-all-profiles.sh  start-finance-agent.sh  start-manager-agent.sh  start-privacy-guard-proxy.sh  test-idempotency.sh  test-integration.py  test-integration.sh  update-goose-jwt.sh  vault-setup-approle.sh  vault-unseal.sh
seeds/: policies.sql  profiles.sql
src/agent-mesh/: .dockerignore  .env.example  .gitignore  .gooseignore  Dockerfile  README.md  __main__.py  agent_mesh_server.py  pyproject.toml  run_integration_tests.sh  setup.sh  test_manual.sh  test_request_approval.py  test_send_task.py  test_structure.py  test_tools_without_jwt.py  validate_b2.sh  validate_b4.sh  validate_b5.sh
src/agent-mesh/tests/: __init__.py  test_fetch_status.py  test_integration.py  test_notify.py  test_server_tools.py
src/agent-mesh/tools/: __init__.py  fetch_status.py  notify.py  request_approval.py  send_task.py
src/controller/: .dockerignore  Cargo.toml  Dockerfile
src/controller/src/: auth.rs  guard_client.rs  lib.rs  main.rs
src/controller/src/api/: openapi.rs
src/controller/src/middleware/: idempotency.rs  mod.rs  policy.rs
src/controller/src/models/: mod.rs  session.rs  task.rs
src/controller/src/org/: csv_parser.rs  mod.rs
src/controller/src/policy/: engine.rs  mod.rs
src/controller/src/repository/: mod.rs  session_repo.rs  task_repo.rs
src/controller/src/routes/: approvals.rs  approvals_test.rs  mod.rs  privacy.rs  profiles.rs  profiles_test.rs  sessions.rs  sessions_test.rs  tasks.rs  tasks_test.rs
src/controller/src/routes/admin/: mod.rs  org.rs  profiles.rs
src/controller/static/: admin.html
src/privacy-guard/: .dockerignore  Cargo.toml  Dockerfile  run_tests.sh
src/privacy-guard-mcp-wrapper/: INSTALLATION.md  README.md  pyproject.toml  setup.sh
src/privacy-guard-mcp-wrapper/privacy_guard_mcp/: __init__.py  server.py
src/privacy-guard-mcp-wrapper/privacy_guard_mcp/tools/: __init__.py  get_privacy_status.py  mask_pii.py  scan_pii.py  set_privacy_mode.py
src/privacy-guard-proxy/: Cargo.toml  Dockerfile  run_tests.sh
src/privacy-guard-proxy/src/: content.rs  control_panel.rs  main.rs  masking.rs  provider.rs  proxy.rs  state.rs
src/privacy-guard-proxy/src/ui/: index.html
src/privacy-guard/src/: audit.rs  detection.rs  main.rs  ollama_client.rs  policy.rs  pseudonym.rs  redaction.rs  state.rs
src/privacy-guard/tests/: integration_tests.rs
test_data/: demo_org_chart.csv  demo_validation.sh
tests/: test_sanity.sh
(+606 files in other folders)
