[package]
name = "goose-controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "goose-controller"
path = "src/main.rs"

[lib]
name = "goose_controller"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
# JWT verification (Phase 1.2)
jsonwebtoken = "9.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Phase 3: OpenAPI and additional utilities
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["limit"] }
# Phase 4: Database persistence
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
# Phase 4: Redis for idempotency deduplication
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
# Phase 5: Profile system
serde_yaml = "0.9"
anyhow = "1.0"
base64 = "0.22"
vaultrs = "0.7"  # Production Vault client (Transit HMAC, KV v2 for Phase 5-6)
# Optional OTLP in Phase 1 docs; not wiring yet
# opentelemetry = { version = "0.24", features = ["rt-tokio"] }
# opentelemetry-otlp = { version = "0.17" }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
