[package]
name = "privacy-guard"
version = "0.1.0"
edition = "2021"
authors = ["Javier <132608441+JEFH507@users.noreply.github.com>"]
description = "Privacy Guard service for PII detection and masking"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
regex = "1"
hmac = "0.12"
sha2 = "0.10"
fpe = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5"
base64 = "0.21"
tower-http = { version = "0.5", features = ["trace"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
